--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "blog-api",
+  "name": "tracker-api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node /src/app.js",
+    "start": "node src/app.js",
     "dev": "nodemon ./src/app.js"
   },
   "keywords": [],
